# mini-qwen-llm

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  MINI_QWEN_LLM.md  README.md  pyproject.toml
benchmarks/: bench_attention.py  bench_memory.py  bench_moe.py  bench_throughput.py  bench_vs_vllm.py  bench_w4a16.py
docs/: 00_baseline.md  01_paged_attention.md  02_fused_qkv_rope.md  03_w4a16_awq.md  04_moe.md  05_scheduler.md
docs/benchmarks/: m1_bench_results.md
docs/debugging/: _template.md
mini_qwen/: config.py
mini_qwen/cache/: block_manager.py  kv_cache.py
mini_qwen/engine/: runner.py  scheduler.py  sequence.py
mini_qwen/kernels/: fused_qkv_rope.py  moe_grouped_gemm.py  moe_permute.py  moe_router.py  moe_unpermute.py  paged_attn_decode.py  paged_attn_prefill.py  rms_norm.py  swiglu_mlp.py  w4a16_gemm.py
mini_qwen/model/: loader.py  qwen3.py  qwen3_moe.py
mini_qwen/model/layers/: attention.py  linear_w4a16.py  mlp.py  moe.py  rms_norm.py  rope.py
mini_qwen/quantization/: awq.py  packing.py
mini_qwen/server/: api.py
mini_qwen/utils/: profiling.py  sampling.py
scripts/: compare_moe_with_hf.py  compare_with_hf.py  debug_fast_layer0.py  debug_layer_compare.py  debug_stream_layers.py  download_model.py  quantize_awq.py  run_inference.py  test_moe_synthetic.py
tests/: conftest.py  test_end_to_end.py  test_fused_qkv_rope.py  test_moe_kernels.py  test_paged_attention.py  test_scheduler.py  test_w4a16_gemm.py
